--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi",
-    "deploy": "bash ./script/deploy.sh"
+    "deploy": "bash ./script/deploy.sh",
+    "dump": "bash ./script/dump.sh"
   },
   "devDependencies": {},
   "dependencies": {
